# zetasql-wasi

./: .gitignore  MODULE.bazel  README.md  ZETASQL_VERSION  pyproject.toml  requirements-test.txt
docs/: RELEASE_USAGE.md
patches/: 0001-Confiugure-wasm32-wasi-target.patch  0002-Fix-thread-is-not-supported-since-libc-has-been-conf.patch  0003-Add-WASI-support-for-IPv6-address-handling-with-inli.patch  0004-WASI-enable-mmap-emulation-define-_WASI_EMULATED_MMA.patch  0005-WASI-Enable-emulated-signal-support-define-link.patch  0006-WASI-Disable-googletest-stream-redirection-by-defini.patch  0007-WASI-Add-support-for-unimplemented-scoped-IPv6-addre.patch  0008-WASI-Fix-invalid-warn-with-warning-in-timer_util.h.patch  0009-WASI-Skip-64-bit-pointer-static_assert-for-WASI-Emsc.patch  0010-WASI-Update-static_assert-for-int64_t-max-value.patch  0011-WASI-Guard-getaddrinfo-error-helper-on-WASI-in-ipadd.patch  0012-WASI-Exclude-spaceship-operator-for-WASI-in-json_val.patch  0013-WASI-Disable-OpenSSL-socket-support-in-Bazel-configu.patch  0014-WASI-Disable-timezone-related-features-in-Bazel-conf.patch  0015-WASI-Add-linker-flags-for-C-standard-library-support.patch  0016-WASI-Add-workaround-for-asm.js-compatibility-in-Baze.patch  0017-WASI-Fix-memory-error.patch  0018-WASI-Support-random-functions.patch  0019-WASI-Add-post-build-optimization-for-WASI-binary-usi.patch  patches.bzl  (+3 more)
toolchain/: BUILD  MODULE.bazel  binaryen.bzl  wasi_cc_toolchain_config.bzl  wasi_sdk.BUILD  wasi_sdk_paths.bzl
toolchain/wrappers/: clang  llvm-ar  llvm-nm  llvm-objdump  llvm-strip  wasm-ld
(+15 files in other folders)
